--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,117 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root{
+  --dark: #1f1e1e;
+  --primary: #ff6f00;
+  --grey: #eae8e8;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body{
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 10%;
+  background: var(--grey);
+  position: fixed;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ul{
+  display: flex;
+  gap: 1rem;
+}
+
+ul li{
+  list-style: none;
+}
+
+.navLink {
+  color: var(--dark);
+  font-size: 20px;
+  cursor: pointer;
+  text-decoration: none;
+  transition: .3s;
+}
+
+.navLink:hover{
+  color: var(--primary);
+  text-decoration: underline;
+}
+
+.logo{
+  font-size: 20px;
+  color: var(--primary);
+}
+
+footer{
+  text-align: center;
+  padding: 1rem;
+  background: var(--grey);
+}
+
+.intro{
+  text-align: center;
+  margin-top: 5rem;
+}
+
+.intro h2{
+  font-size: 3rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+.intro span{
+  font-size: 2rem;
+  font-weight: 600;
+  font-family: monospace;
+}
+
+.Home{
+  height: 100%;
+}
+
+.post_container{
+  display: grid;
+  align-items: flex-start;
+  gap: 3rem;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 5rem;
+}
+
+
+.postItem img{
+  width: 100%;
+  height: 50%;
+  border-radius: 10px 10px 0 0;
+}
+
+.postItem{
+  border: 1px solid black;
+  height: 25rem;
+  border-radius: 10px;
+}
+
+.postItem .title{
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin: 1rem 2rem;
+}
+
+.postItem .body{
+  margin: 0 2rem;
+  font-size: 18px;
+  line-height: 1.5rem;
+  word-spacing: 2px;
+  color: rgb(109, 108, 108);
 }
